--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h4>Our team</h4>
+    <h2>New code added</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eum?git</p>
 </body>
 </html>
